# stellarmicro

./: .gitignore  LICENSE  README.md  out.txt  pyproject.toml
doc/: stellarmicro-doc.tex
src/stellarmicro/: _np.py  atomic.py  constants.py  nuclear.py  radiation.py  solar.py
src/stellarmicro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/stellarmicro/eos/: __init__.py  composition.py  config.py  core.py  ionisation_spec.py  neutral.py  saha.py
tests/: conftest.py  test_atomic_api.py  test_composition.py  test_composition_from_logeps.py  test_eos_YZ_wrapper.py  test_eos_consistency.py  test_eos_free_energy_derivs_autograd.py  test_eos_identities.py  test_eos_options.py  test_eos_sanity.py  test_eos_shapes.py  test_nuclear.py  test_radiation.py  test_solar_composition.py  test_visual_smoke.py
